# AF2Dock

./: predict.py  predict_afm.py  pyproject.toml  readme.md  test_pinder.py  test_pinder_afm.py  train.py
AF2Dock/: config.py
AF2Dock/data/: datamodule.py  of_data.py
AF2Dock/model/: conditioning.py  denoiser.py  heads.py  model.py  model_alt.py  primitives.py  transition.py  triangular.py
AF2Dock/utils/: data_utils.py  dockq.py  inference_utils.py  ipsae.py  loss.py  minilora.py  train_utils.py  utils.py
data/: train_samples_to_exclude.txt
data/example_input/: ab_8tbq_1.csv  ab_8tbq_1_l_pred.cif  ab_8tbq_1_r_pred_wo_cdrh3.a3m  ab_8tbq_1_r_pred_wo_cdrh3.cif
notebooks/: compute_success_rate.ipynb  compute_success_rate_pinder.ipynb
scripts/: compute_pinder_ESM_embeddings.py  download_weights.py  find_train_three_body_interactions.py  predict_afm.py  test_pinder.py  test_pinder_afm.py
